# mexico-immigration-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
app/: streamlit_app.py
configs/: default.yaml
data/samples/: README.md
docs/: project-showcase.html
docs/architecture/adr/: ADR-001-toolkit-domain-separation.md  ADR-002-pdf-library-choice.md  ADR-003-dependency-audit-gate-strategy.md  ADR-004-progressive-coverage-threshold.md  ADR-005-ingestion-intermediate-types.md  ADR-006-evaluation-local-judge-degradation.md  ADR-007-recursive-chunking.md
docs/engineering_skills/: 01_version_control.md  02_code_quality.md  03_testing.md  04_security.md  05_rag_evaluation.md  06_observability.md  07_documentation.md  README.md
evaluations/: test_questions.jsonl
evaluations/results/: baseline.json
scripts/: evaluate.py  ingest.py  init_repo.bat  init_repo.sh
security/: accepted-vulnerabilities.txt
src/application/: __init__.py  rag_service.py  types.py
src/domain/prompt_templates/: __init__.py
src/genai_toolkit/config/: __init__.py  settings.py
src/genai_toolkit/embeddings/: __init__.py  base.py  sentence_transformer_provider.py
src/genai_toolkit/evaluation/: __init__.py  custom_metrics.py
src/genai_toolkit/ingestion/: __init__.py  base.py  pdf_loader.py  types.py
src/genai_toolkit/llm/: __init__.py  base.py  ollama.py
src/genai_toolkit/observability/: __init__.py  logger.py  store.py
src/genai_toolkit/pipeline/: __init__.py  ingest.py
src/genai_toolkit/processing/: __init__.py  _sanitize.py  base.py  recursive_text_chunker.py  sliding_window_chunker.py
src/genai_toolkit/prompts/: __init__.py  base.py  rag_prompt_manager.py
src/genai_toolkit/retrieval/: __init__.py  base.py  simple_retriever.py  types.py
src/genai_toolkit/vectorstore/: __init__.py  base.py  chroma.py
tests/: conftest.py
tests/integration/: conftest.py  test_chroma_e2e.py  test_ingestion_e2e.py  test_retrieval_e2e.py
tests/security/: test_chunker_sanitization.py  test_document_guards.py  test_input_guards.py
tests/unit/: test_chroma_vectorstore.py  test_chunker.py  test_embeddings_provider.py  test_evaluation.py  test_ingest_pipeline.py  test_observability.py  test_ollama_provider.py  test_pdf_loader.py  test_placeholder.py  test_prompt_manager.py  test_rag_service.py  test_recursive_chunker.py  test_retriever.py  test_settings.py
