[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexico-immigration-rag"
version = "0.1.0"
description = "RAG assistant for public Mexican immigration documentation. Domain-agnostic GenAI core with a thin domain layer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]

# Las dependencias de runtime se gestionan en requirements.txt para la POC.
# Aquí se declara solo el mínimo para empaquetar el paquete src/.
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------------------------------------------------
# Black
# ----------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes; I: imports; B: bugbear;
# UP: pyupgrade; N: naming; SIM: simplificaciones
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["genai_toolkit", "application", "domain"]

# ----------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Estricto en el núcleo reutilizable
[[tool.mypy.overrides]]
module = "genai_toolkit.*"
strict = true

# Relajado en exploración
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# ----------------------------------------------------------------------
# pytest + coverage
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "unit: pruebas unitarias rápidas y deterministas",
    "integration: pruebas de integración entre componentes reales",
    "e2e: pruebas de extremo a extremo del flujo completo",
    "security: pruebas adversariales de seguridad",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
