[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexico-immigration-rag"
version = "0.1.0"
description = "RAG assistant for public Mexican immigration documentation. Domain-agnostic GenAI core with a thin domain layer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]

# Las dependencias de runtime se gestionan en requirements.txt para la POC.
# Aquí se declara solo el mínimo para empaquetar el paquete src/.
dependencies = []

[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genai_toolkit = ["py.typed"]

# ----------------------------------------------------------------------
# Black
# ----------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes; I: imports; B: bugbear;
# UP: pyupgrade; N: naming; SIM: simplificaciones
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["genai_toolkit", "application", "domain"]

# ----------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Estricto en el núcleo reutilizable
[[tool.mypy.overrides]]
module = "genai_toolkit.*"
strict = true

# Relajado en exploración
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Librerías de terceros sin stubs de tipos completos para mypy, o cuyo
# tipado interno mypy no resuelve de forma consistente entre versiones.
# Ver: https://github.com/pydantic/pydantic/discussions/9446 (issue conocido
# y documentado del propio proyecto pydantic, no un problema de esta config).
# No aplica a "genai_toolkit.*" (nuestro propio código, sigue en strict).
[[tool.mypy.overrides]]
module = ["pydantic.*", "pydantic_settings.*", "yaml.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------
# pytest + coverage
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "unit: pruebas unitarias rápidas y deterministas",
    "integration: pruebas de integración entre componentes reales",
    "e2e: pruebas de extremo a extremo del flujo completo",
    "security: pruebas adversariales de seguridad",
]

[tool.coverage.report]
# Umbral progresivo por fase del roadmap (ver Testing Skill y ADR-004).
# 70% es la meta declarada para un proyecto con componentes implementados;
# en Fase 0 el toolkit es solo Protocols sin lógica (0% de cobertura propia,
# matemáticamente imposible de evitar), así que el umbral fijo en 70% desde
# el día 1 bloquearía cada PR sin reflejar ningún problema real.
#
# Plan de incremento (actualizar este valor y la fecha al cerrar cada fase):
#   Fase 0 (actual):  30%  — solo Settings tiene lógica + tests
#   Fase 1:           50%  — ingestion, chunking, embeddings, vectorstore
#   Fase 3:           70%  — meta original, con retriever/pipeline implementados
fail_under = 30
show_missing = true
